maze.lessons.maze.island.IslandMaze.scala.error
Escaper:62: error: value &&! is not a member of Boolean
  while (!estFaceMur()&&!murADroite()){
                      ^